fix: refine subtitle styles for formacao section to enhance readability and layout

--- a/css/formacao.css
+++ b/css/formacao.css
@@ -24,9 +24,15 @@
   left: 20px;
 }
 
+
 .formacao .subtitulo {
   color: #ffffff;
-  max-width: 5ch;
+  max-width: 1ch; 
+  word-break: break-all;
+  text-align: center;
+  line-height: 1;
+  font-size: 6rem; 
+  margin: 0 auto; 
 }
 
 .faculdade-lista {
@@ -133,34 +139,30 @@
     padding: 60px 20px;
     gap: 40px;
   }
+  
   .formacao .subtitulo {
     color: #ffffff;
+    max-width: none; 
+    word-break: normal;
+    font-size: 3rem; 
+    text-align: left;
+    margin: 0;
   }
+  
   .formacao-extra h3::before {
     position: initial;
     margin-bottom: 10px;
   }
 }
 
+
 @media (max-width: 450px) {
   .formacao-container {
-    grid-template-columns: 1fr;
-    padding: 60px 20px;
-    gap: 40px;
     margin-bottom: 40px;
   }
 
   .formacao .subtitulo {
-    display: block;
-    color: #ffffff;
-    font-size: 2.5rem;
-    text-align: left;
-    margin-bottom: 20px;
-  }
-
-  .formacao-extra h3::before {
-    position: initial;
-    margin-bottom: 10px;
+    font-size: 2.5rem; 
   }
 
   .faculdade-lista {
